complete chapter 3, waiting for validation

--- a/writing/includes/dedication.tex
+++ b/writing/includes/dedication.tex
@@ -17,9 +17,7 @@
 	
 	To my dear father
 	
-	To my dear sisters
-	
-	To my dear brothers
+	To my dear sisters and brothers
 	
 	To my adorable grandmother
 	
@@ -33,5 +31,5 @@
 	
 	\vspace{\baselineskip}
 	\usefont{T1}{LobsterTwo-LF}{bx}{it}
-	Fathi Abdelmalek
+	FATHI ABDELMALEK
 \end{dedication}
