--- a/writing/includes/part2/section3.tex
+++ b/writing/includes/part2/section3.tex
@@ -7,9 +7,7 @@ The "ASL-Sensor-Dataglove" Dataset contains a comprehensive collection of \ac{sl
 To ensure consistency and usability, each gesture recording has a duration of one second and a half. Therefore, each gesture is represented by 150 consecutive rows in the CSV file, and each CSV file contains 1500 rows, representing a total of 1,500,000 rows in the entire dataset. This large-scale dataset enables robust training and evaluation of sign language recognition models.
 \paragraph{}
 The dataset is made publicly available for researchers and practitioners in the field of sign language recognition. It can be accessed through the following link: "ASL-Sensor-Dataglove" Dataset. The dataset owners have graciously made it accessible for public use, facilitating further advancements in sign language recognition research and development.
-\paragraph{}
-In the preprocessing phase, we performed necessary data cleaning and normalization techniques to enhance the quality and consistency of the dataset. Outliers were removed, and the sensor readings were normalized to ensure compatibility across different subjects and recording sessions. Missing values, if any, were handled using appropriate imputation methods.
-\begin{table}[h!]
+\begin{table}
 	\centering
 	\caption{Summary of the ASL-Sensor-Dataglove Dataset}
 	\label{tab:dataset-summary}
@@ -24,7 +22,7 @@ In the preprocessing phase, we performed necessary data cleaning and normalizati
 		\textbf{Records per Sign} & 250 \\
 		\hline
 	\end{tabular}
-\end{table}[h!]
+\end{table}
 \begin{table}
 	\centering
 	\caption{Selected Columns in the "ASL-Sensor-Dataglove" Dataset}
