--- a/writing/includes/references.bib
+++ b/writing/includes/references.bib
@@ -50,3 +50,7 @@
 	title = {MPU6050-components101},
 	note = {\url{https://components101.com/sensors/mpu6050-module}},
 }
+@misc{mpu-pinout,
+	title = {Interfacing ESP32 with MPU6050},
+	note = {\url{https://www.tutorialspoint.com/esp32_for_iot/interfacing_esp32_with_mpu6050.htm}},
+}
