--- a/writing/includes/title.tex
+++ b/writing/includes/title.tex
@@ -19,7 +19,9 @@
 			\begin{flushright}
 				\emph{\textbf{Supervised by}}\\
 				\textsc{Pr. Mohamed Amroun}\\
-				\textsc{Dr. Issam Bendib}
+				\textsc{Dr. Issam Bendib}\\
+				\textsc{Dr. M Yassine Haouam}\\
+				\textsc{Dr. Khelifa Boudjemaa}
 			\end{flushright}
 		\end{minipage}
 		\vfill
