Finally add the esp32 projects to the repository

--- a/writing/includes/general-introduction.tex
+++ b/writing/includes/general-introduction.tex
@@ -1,6 +1,6 @@
 \chapter*{General Introduction}
 \paragraph{}
-This report presents the results and findings of our research on Arabic sign language recognition (SLR). The objective of our study is to develop a deep learning model that can accurately interpret and recognize Arabic sign language gestures. The ultimate goal is to bridge the communication gap between individuals who are fluent in sign language and those who are not, thereby fostering inclusivity and accessibility for the deaf community.
+This report presents the results and findings of our research on \ac{slr}. The objective of our study is to develop a \ac{dl} model that can accurately interpret and recognize \ac{sl} gestures. The ultimate goal is to bridge the communication gap between individuals who are fluent in \ac{sl} and those who are not, thereby fostering inclusivity and accessibility for the deaf community.
 \paragraph{}
 In this report, we provide a comprehensive overview of our research methodology, experiments, and results. The report is structured as follows:
 \begin{itemize}
